deploy/standalone-setup.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    run: proxy
  name: proxy
  namespace: capsule-system
spec:
  replicas: 1
  selector:
    matchLabels:
      run: proxy
  template:
    metadata:
      labels:
        run: proxy
    spec:
      restartPolicy: Always
      serviceAccountName: proxy
      hostNetwork: false
      volumes:
      - configMap:
          defaultMode: 420
          name: certs
        name: certs
      containers:
      - name: proxy
        image: quay.io/clastix/capsule-proxy
        imagePullPolicy: IfNotPresent
        command:
        - /capsule-proxy
        - --capsule-user-group=capsule.clastix.io
        - --zap-log-level=5
        - --enable-ssl=true
        - --ssl-cert-path=/opt/certs/tls.crt
        - --ssl-key-path=/opt/certs/tls.key
        ports:
        - containerPort: 9001
          name: proxy
          protocol: TCP
        - containerPort: 8080
          name: metrics
          protocol: TCP
        - containerPort: 8081
          name: probe
          protocol: TCP
        readinessProbe:
          httpGet:
            path: /readyz/
            port: probe
            scheme: HTTP
        livenessProbe:
          httpGet:
            path: /healthz/
            port: probe
            scheme: HTTP
        resources:
        volumeMounts:
        - mountPath: /opt/certs
          name: certs
---
apiVersion: v1
kind: Service
metadata:
  name: proxy
  namespace: capsule-system
  labels:
    run: proxy
spec:
  ports:
  - protocol: TCP
    port: 9001
    targetPort: 9001
  selector:
    run: proxy
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  namespace: capsule-system
  name: proxy
  labels:
    run: proxy
  annotations:
    ingress.kubernetes.io/ssl-passthrough: "true"
spec:
  rules:
  - host: kube.clastix.io
    http:
      paths:
      - path: /
        backend:
          serviceName: proxy
          servicePort: 9001
